tests/models/struct/unnamed/vec/fail/alias.rs
use dade::model;
#[model]
struct TestModel (
   #[field(alias = "val")]
    Vec<()>
);
fn main() {}
